<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_on_boarding_scene"
    tools:context=".ui.auth.onboard.OnBoardingFragment">

    <ImageView
        android:id="@+id/iv_people"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:alpha="0"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/people"
        android:contentDescription="@string/gambar_welcome"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/onboard_title"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_people" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="3.0dp"
        android:text="@string/onboard_detail"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:text="@string/register"
        android:textAllCaps="false"
        app:backgroundTint="@color/black"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:text="@string/login"
        android:textAllCaps="false"
        app:backgroundTint="@color/black"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_register"
        app:layout_constraintTop_toBottomOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>