<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="16dp"
    android:paddingHorizontal="24dp"
    android:paddingBottom="120dp">

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/create_story_here"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/text_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_desc"
            android:minLines="5"
            android:lineSpacingMultiplier="1.2"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_lokasi"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/ic_location"
        app:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_lokasi"
        app:layout_constraintBottom_toBottomOf="@id/tv_lokasi"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_lokasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:paddingVertical="8dp"
        android:maxLines="4"
        android:ellipsize="end"
        android:textSize="16sp"
        android:background="@null"
        android:hint="@string/location"
        android:inputType="textCapWords|textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/image_lokasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_layout"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_photo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/ic_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lokasi"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_add_foto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingVertical="8dp"
        android:textSize="16sp"
        android:hint="@string/add_img"
        app:layout_constraintStart_toEndOf="@+id/image_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_photo"
        app:layout_constraintBottom_toBottomOf="@id/image_photo"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_photo"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/image_photo"
        app:layout_constraintStart_toEndOf="@id/image_photo"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/avatars"/>

    <View
        android:id="@+id/bg_clear_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_background"
        android:labelFor="@id/btn_clear_photo"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/btn_clear_photo"
        app:layout_constraintBottom_toBottomOf="@id/btn_clear_photo"
        app:layout_constraintStart_toStartOf="@id/btn_clear_photo"
        app:layout_constraintEnd_toEndOf="@id/btn_clear_photo"/>

    <ImageButton
        android:id="@+id/btn_clear_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:src="@drawable/ic_baseline_close_24"
        android:visibility="gone"
        app:tint="@color/grey"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@+id/iv_photo"
        app:layout_constraintEnd_toEndOf="@id/iv_photo"
        android:contentDescription="@string/del_img"/>

</androidx.constraintlayout.widget.ConstraintLayout>