<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_swipe"
        android:layout_width="40dp"
        android:layout_height="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        android:backgroundTint="#9397a3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_gallery"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="40dp"
        android:src="@drawable/ic_gallery"
        app:layout_constraintEnd_toStartOf="@id/iv_camera_x"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/gallery"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/iv_gallery"
        app:layout_constraintEnd_toEndOf="@id/iv_gallery"
        app:layout_constraintTop_toBottomOf="@id/iv_gallery"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_camera_x"
        android:layout_width="72dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toStartOf="@id/iv_camera"
        app:layout_constraintStart_toEndOf="@id/iv_gallery"
        app:layout_constraintTop_toTopOf="@id/iv_gallery"
        app:layout_constraintBottom_toBottomOf="@id/iv_gallery"/>

    <TextView
        android:id="@+id/tv_camera_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/camerax"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/iv_camera_x"
        app:layout_constraintEnd_toEndOf="@id/iv_camera_x"
        app:layout_constraintTop_toBottomOf="@id/iv_camera_x"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_camera"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_insta"
        app:layout_constraintStart_toEndOf="@id/iv_camera_x"
        app:layout_constraintTop_toTopOf="@id/iv_camera_x"
        app:layout_constraintBottom_toBottomOf="@id/iv_camera_x"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/camera"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/iv_camera"
        app:layout_constraintEnd_toEndOf="@id/iv_camera"
        app:layout_constraintTop_toBottomOf="@id/iv_camera"/>
</androidx.constraintlayout.widget.ConstraintLayout>